@@ -352,7 +352,14 @@ class ModuleIsotopeProductList extends ModuleIsotope
 	 */
 	protected function findCategories($strCategoryScope)
 	{
-		global $objPage;
+		if ($this->defineRoot && $this->rootPage > 0)
+		{
+			$objPage = $this->getPageDetails($this->rootPage);
+		}
+		else
+		{
+			global $objPage;
+		}
 		
 		switch($strCategoryScope)
 		{
@@ -380,7 +387,6 @@ class ModuleIsotopeProductList extends ModuleIsotope
 			case 'current_category':
 				return array($objPage->id);
 		}
-
 	}
 }
 
